force-app/main/default/objects/Routing_Config__mdt/fields/Acted_On_Field__c.field-meta.xml
<CustomField>
    <fullName>Acted_On_Field__c</fullName>
    <description>API name of the field on the routed record that indicates agent action. The escalation job checks whether this field equals Acted_On_Value__c. If it does, the record is considered acted on and skipped. Example: Status for Case, or a custom Last_Touched__c DateTime field.</description>
    <label>Acted On Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>