force-app/main/default/objects/Routing_Config__mdt/fields/Acted_On_Value__c.field-meta.xml
<CustomField>
    <fullName>Acted_On_Value__c</fullName>
    <description>Expected value of Acted_On_Field__c that indicates the agent has acted on the record. When the field matches this value, escalation is suppressed. Supports comma-separated values for multiple acted-on states. Example: Working,In Progress.</description>
    <label>Acted On Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>