force-app/main/default/objects/Routing_Config__mdt/fields/Closed_Status_Values__c.field-meta.xml
<CustomField>
    <fullName>Closed_Status_Values__c</fullName>
    <description>Comma-delimited status values considered closed. Drives the open-item eligibility check when Allow_Multiple__c is false. e.g. Closed,Resolved,Cancelled</description>
    <label>Closed Status Values</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>