force-app/main/default/objects/Routing_Config__mdt/fields/Defer_Reset_Field__c.field-meta.xml
<CustomField>
    <fullName>Defer_Reset_Field__c</fullName>
    <description>API name of the field on the routed SObject to reset when an agent defers work. Used by the Agent Work Panel (F2) defer action. Example: OwnerId to reassign back to queue, Status to revert to open. Must be a valid writable field on the target SObject.</description>
    <label>Defer Reset Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>