force-app/main/default/objects/Routing_Config__mdt/fields/Defer_Reset_Value__c.field-meta.xml
<CustomField>
    <fullName>Defer_Reset_Value__c</fullName>
    <description>Value to write into Defer_Reset_Field__c when an agent defers work. Used in combination with Defer_Reset_Field__c by the Agent Work Panel (F2). Example: a Queue ID to return ownership to a queue, or a status value like "Open". Treated as a String and cast at runtime based on the target field type.</description>
    <label>Defer Reset Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>