force-app/main/default/objects/Routing_Config__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Free-text description for admins to document what this routing config does, which business process it supports, and any dependencies. Displayed in Setup Wizard and config list views.</description>
    <label>Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>