force-app/main/default/objects/Routing_Config__mdt/fields/Escalation_Action__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Action__c</fullName>
    <description>Action to take when SLA threshold is breached. Re-route: return record to Escalation_Return_Owner__c and re-enter routing. Notify: send email to Escalation_Notify_Email__c. Both: re-route AND notify.</description>
    <label>Escalation Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Re-route</fullName>
                <default>true</default>
                <label>Re-route</label>
            </value>
            <value>
                <fullName>Notify</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>