force-app/main/default/objects/Routing_Config__mdt/fields/Escalation_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Master toggle for SLA escalation on this routing config. When false, the SLA Escalation Job skips records routed by this config. Subscriber-controlled so each customer can enable escalation per routing scenario.</description>
    <label>Escalation Enabled</label>
    <type>Checkbox</type>
</CustomField>