force-app/main/default/objects/Routing_Config__mdt/fields/Escalation_Notify_Email__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Notify_Email__c</fullName>
    <description>Email address for supervisor escalation notifications. Used when Escalation_Action__c is Notify or Both. When blank, notification is skipped even if action includes Notify. Supports comma-separated addresses for multiple recipients.</description>
    <label>Escalation Notify Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>