force-app/main/default/objects/Routing_Config__mdt/fields/Escalation_Return_Owner__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Return_Owner__c</fullName>
    <description>18-character ID of the Queue or Integration User to return the record to during escalation re-routing. The escalation engine sets the owner field back to this value before re-entering routing. Example: a triage queue ID or service account user ID.</description>
    <label>Escalation Return Owner</label>
    <length>18</length>
    <type>Text</type>
</CustomField>