force-app/main/default/objects/Routing_Config__mdt/fields/Escalation_Threshold_Pct__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Threshold_Pct__c</fullName>
    <description>Percentage of total SLA window remaining that triggers escalation. Default: 20 means escalation fires when only 20% of SLA time remains. Uses SLA_Minutes__c as the total window. Example: 60-minute SLA with 20% threshold = escalate at 12 minutes remaining.</description>
    <label>Escalation Threshold %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>