force-app/main/default/objects/Routing_Config__mdt/fields/Include_Busy_Agents__c.field-meta.xml
<CustomField>
    <fullName>Include_Busy_Agents__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When true (default), agents with Availability_Status__c = Busy are included in the candidate pool but ranked below Online agents. When false, Busy agents are excluded entirely. Away and Offline agents are always excluded regardless of this setting.</description>
    <label>Include Busy Agents</label>
    <type>Checkbox</type>
</CustomField>