force-app/main/default/objects/Routing_Config__mdt/fields/Max_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Max_Capacity__c</fullName>
    <description>Maximum concurrent open work items an agent can hold for this routing config. Used by the availability filter (Layer 2) to exclude at-capacity agents and by the Supervisor Dashboard (F3) agent load grid. When null or zero, capacity is not enforced for this config — the engine-level Agent__c.Max_Capacity__c still applies.</description>
    <label>Max Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>