force-app/main/default/objects/Routing_Config__mdt/fields/Pre_Assignment_Owner_Type__c.field-meta.xml
<CustomField>
    <fullName>Pre_Assignment_Owner_Type__c</fullName>
    <description>FOR UPDATE re-validation: only route if current Owner.Type matches this value. Blank = skip re-validation. Common value: Queue.</description>
    <label>Pre-Assignment Owner Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>