force-app/main/default/objects/Routing_Config__mdt/fields/SLA_Deadline_Field__c.field-meta.xml
<CustomField>
    <fullName>SLA_Deadline_Field__c</fullName>
    <description>API name of the DateTime field on the routed SObject that holds the SLA deadline. Used by the Agent Work Panel (F2) for SLA countdown display. Example: SlaExitDate for Case, Target_Date__c for custom objects. Must be a DateTime field — Date fields are not supported for countdown calculation.</description>
    <label>SLA Deadline Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>