force-app/main/default/objects/Routing_Config__mdt/fields/SLA_Minutes__c.field-meta.xml
<CustomField>
    <fullName>SLA_Minutes__c</fullName>
    <description>Maximum minutes allowed from routing request receipt to successful assignment. Used by AuditLogger to compute SLA_Met__c on Routing_Log__c. When null or zero, SLA tracking is disabled for this config — SLA_Met__c will be null on the log record. Subscriber-controlled so each customer can define SLA targets per routing scenario.</description>
    <label>SLA Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>