force-app/main/default/objects/Routing_Config__mdt/fields/SLA_Warn_Threshold_Pct__c.field-meta.xml
<CustomField>
    <fullName>SLA_Warn_Threshold_Pct__c</fullName>
    <description>SLA remaining percentage at or below which the Agent Work Panel displays the countdown in amber (warning). Must be greater than SLA_Critical_Threshold_Pct__c and less than 100. When null, the panel falls back to 50. Subscriber-tunable — admins can relax or tighten the warning band per routing scenario without code changes.</description>
    <inlineHelpText>Remaining % at which the SLA countdown turns amber. Must be &gt; Critical % and &lt; 100. Defaults to 50 if blank.</inlineHelpText>
    <label>SLA Warn Threshold %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>